package hbasestats;
option java_package = "com.scrapinghub.frontera.hbasestats";
option java_outer_classname = "QueueRecordOuter";

message QueueRecord {
    required bytes fingerprint = 1;
    required sint32 hostCrc32 = 2;
    optional int32 partitionId = 3;
    optional float start_interval = 4;
    optional float end_interval = 5;
    optional uint64 timestamp = 6;

}